Switching to isotope v2 messed up some spacing issues. That are now fixed.

--- a/source/stylesheets/global.css.sass
+++ b/source/stylesheets/global.css.sass
@@ -419,10 +419,6 @@ h1,h2,h3,h4
 			size: 1.3em
 		line:
 			height: 0.75em
-	.courses
-		padding:
-			top: 0.225em
-			bottom: 0.45em
 
 #filters
 	display: block
