--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -21,6 +21,8 @@ div.mobile
 
 #box_container, .expandable
 	width: 100%
+	position: relative
+	top: 10px
 
 #cv_html
 	display: block
